@@ -1,22 +1,6 @@
-<h1 class="title">Your servers</h1>
+<% if @servers.any? %>
+  <%= render "server_overview" %>
+<% else %>
+  <%= render "empty_state" %>
+<% end %>
 
-<div class="columns">
-  <div class="column is-8 content">
-    <p>Below you find a list of all your servers and their status</p>
-    <p><span class="tag is-success">Server is up</span> We tested the server within the last 30 minutes,
-    server was reachable</p>
-    <p><span class="tag is-warning">Setup not finished</span> You did not yet finish the setup process for this server</p>
-    <p><span class="tag is-danger">Server is down</span> Server was unreachable in the last 30 minutes.</p>
-  </div>
-  <div class="column is-4">
-    <%= link_to "Add a new server", new_server_path, class: "button is-large is-success is-outlined" %>
-  </div>
-</div>
-<hr/>
-<div class="servers">
-  <% @servers.each_slice(4).each do |servers| %>
-    <div class="columns">
-    <%= render servers %>
-    </div>
-  <% end %>
-</div>
