@@ -8,3 +8,4 @@ v 0.0.1 (unreleased)
 * Make sure service containers are destroyed when removing an app Fixes: #80 (jvanbaarsen)
 * Schedule Health_checks in their own queue and run them in IC. (jvanbaarsen)
 * Add ability to remove users from the IC (brambokdam)
+* Add blank slate for server page (jvanbaarsen)
